# app/Http/Controllers/Controller.php
@@ -6,19 +6,10 @@ use Illuminate\Foundation\Auth\Access\AuthorizesRequests;
 use Illuminate\Foundation\Validation\ValidatesRequests;
 use Illuminate\Routing\Controller as BaseController;
 use App\Models\Recipe;
+use Illuminate\Http\Request;
 
 class Controller extends BaseController
 {
     use AuthorizesRequests, ValidatesRequests;
 
-    /**
-     * @OA\Get(
-     *     path="/api/recipes",
-     *     @OA\Response(response="200", description="List of recipes")
-     * )
-     */
-    public function index()
-    {
-        return Recipe::all();
-    }
 }
