# app/Models/Recipe.php
@@ -10,6 +10,16 @@ class Recipe extends Model
     use HasFactory;
 
     /**
+     * The attributes that are mass assignable.
+     *
+     * @var array
+     */
+    protected $fillable = ['name', 'ingredients', 'preparationTime', 'cookingTime', 'serves'];
+    protected $casts = [
+        'ingredients' => 'array',
+    ];
+
+    /**
      * @OA\Info(
      *      version="1.0.0",
      *      title="L5 Swagger OpenApi Test",
